[main] Update 2026-01-27.22 (#429)
Reference commit: f5ecdb9a4e